--- a/PaginaWeb_InicioSesion.html
+++ b/PaginaWeb_InicioSesion.html
@@ -4,22 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="styles/iniciosesion.css" rel="stylesheet" type="text/css">
-    <link rel="icon" href="img/iconodefrikiweb.ico" type="image/icon">
+    <link rel="icon" href="iconodefrikiweb.ico" type="image/icon">
     <title>Iniciar Sesion-FrikiWeb</title>
 </head>
 <body>
     <div class="contenedor-iniciador-sesion">
-        <img src="img/teto.jpg" alt="teto" height=196px width=217px>
+        <img src="teto.jpg" alt="teto" height=196px width=217px>
 
         <h1><i>Inicio de Sesion</i></h1>
 
         <div class="grupo-input">
-            <img src="img/user.png" alt="imagen de un usuario"  height=30px width=30px>
+            <img src="user.png" alt="imagen de un usuario"  height=30px width=30px>
             <input type="text" placeholder="Nombre de Usuario">
         </div>
 
         <div class="grupo-input">
-            <img src="img/contra.png" alt="imagen de una contraseña" height=30px width=30px>
+            <img src="contra.png" alt="imagen de una contraseña" height=30px width=30px>
             <input type="password" placeholder="Contraseña">
         </div>
 
